<resources>
    <string name="app_name">Weather App</string>
    <string name="medicine_name">Tên thuốc: </string>
    <string name="medicine_type">Loại thuốc: </string>
    <string name="medicine_content">Thành phần: </string>
    <string name="medicine_uses">Công dụng: </string>
    <string name="detail_info">Thông tin chi tiết: </string>
    <string name="select_medicine">Chọn loại thuốc: </string>



</resources>
