<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"

    tools:context=".MedicineDetail">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical"
            android:weightSum="7">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_gravity="center|fill"
                android:background="@drawable/border_squard_black">

                <ImageView
                    android:id="@+id/imAvata"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:layout_margin="4dp"/>

            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:weightSum="15"
                android:orientation="vertical"
                android:background="@drawable/border_squard_black">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="@string/detail_info"
                        android:layout_weight="1"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:weightSum="3"
                    android:background="@drawable/border_squard_black">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="@string/medicine_name"
                        android:layout_weight="1"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="4dp"

                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/medicine_name"
                        android:layout_gravity="center_vertical"
                        android:textSize="14dp"
                        android:layout_weight="2"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:ellipsize="marquee"
                        android:fadingEdge="horizontal"
                        android:gravity="top|left"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:layout_marginLeft="4dp"


                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:weightSum="3"
                    android:background="@drawable/border_squard_black">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="@string/medicine_type"
                        android:layout_weight="1"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="4dp"

                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/medicine_type"
                        android:layout_gravity="center_vertical"
                        android:textSize="14dp"
                        android:layout_weight="2"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:ellipsize="marquee"
                        android:fadingEdge="horizontal"
                        android:gravity="top|left"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:layout_marginLeft="4dp"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2"
                    android:weightSum="3"
                    android:background="@drawable/border_squard_black">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="left"
                        android:text="@string/medicine_content"
                        android:layout_weight="1"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="4dp"


                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/medicine_content"
                        android:textSize="14dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:ellipsize="marquee"
                        android:fadingEdge="horizontal"
                        android:gravity="top|left"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2"
                    android:weightSum="3"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="left"
                        android:text="@string/medicine_uses"
                        android:layout_weight="1"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="4dp"

                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/medicine_uses"
                        android:textSize="14dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:ellipsize="marquee"
                        android:fadingEdge="horizontal"
                        android:gravity="top|left"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:layout_marginLeft="4dp"

                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>